--- a/package.json
+++ b/package.json
@@ -2,28 +2,35 @@
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
-    "test": "web-test-runner \"src/**/*.test.tsx\"",
+    "test": "web-test-runner \"util/__tests__/**/*.test.tsx\" --watch",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
     "@snowpack/plugin-dotenv": "^2.0.5",
+    "@snowpack/plugin-postcss": "^1.0.11",
     "@snowpack/plugin-react-refresh": "^2.3.9",
+    "@snowpack/plugin-sass": "^1.2.0",
     "@snowpack/plugin-typescript": "^1.1.1",
     "@snowpack/web-test-runner-plugin": "^0.1.5",
     "@testing-library/react": "^11.0.0",
     "@types/chai": "^4.2.13",
+    "@types/cssnano": "^4.0.0",
+    "@types/postcss-preset-env": "^6.7.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/snowpack-env": "^2.3.2",
     "@web/test-runner": "^0.10.0",
+    "autoprefixer": "^9.8.6",
     "chai": "^4.2.0",
     "prettier": "^2.0.5",
     "snowpack": "^2.18.4",
+    "snowpack-plugin-svgr": "^0.1.2",
     "typescript": "^4.0.0"
   }
 }
